tests/unit/default/syntax-error/093-add-pk-table-parens-names.e.t
---- IN ----
+PK%table(foo,bar
---- OUT ----
---- ERR ----
syntax: expected `)` after `...le(foo,bar` instead of EOL at position 17 - at line 1
---- EXIT ----
1
